--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "ejs": "^3.1.10",
+    "ejs-mate": "^4.0.0",
     "express": "^4.21.1",
+    "mate": "^0.21.0",
     "method-override": "^3.0.0",
     "mongoose": "^8.7.1",
     "node": "^20.18.0",
