--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "mongoose": "^8.7.1",
     "node": "^20.18.0",
     "nodemon": "^3.1.7",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0",
     "path": "^0.12.7"
   }
 }
